--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,14 @@
 
     <string name="action_bookmark">Bookmark</string>
 
-    <string name="drawer_bookmarks">Bookmarks</string>
-    <string name="drawer_histories">Histories</string>
+    <string name="drawer_bookmark">Bookmark</string>
+    <string name="drawer_history">History</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="no_data_available">No data available</string>
+
+    <string name="toast_no_team">No team unusable</string>
+    <string name="toast_esa_fine">(\\( ⁰⊖⁰ )/)</string>
+    <string name="toast_esa_leave">──=≡=͟͟͞͞(\\( ⁰⊖⁰)/)</string>
+    <string name="toast_failed">Failed</string>
 
 </resources>
